<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.CreatePostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="-63dp"
        tools:layout_editor_absoluteY="-136dp"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/preview_image"
            android:src="@drawable/ic_baseline_broken_image_24"
            app:layout_constraintBottom_toTopOf="@+id/switch1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_description_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:labelFor="@+id/textView"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:text="@string/enable_location"
            app:layout_constraintBottom_toTopOf="@+id/descriptionEditTextLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/retake_photo"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/take_photo_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <androidx.camera.view.PreviewView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.camera.view.PreviewView>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="-16dp"
            android:background="@color/whiteTrans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/captureImage" />

        <ImageButton
            android:id="@+id/externalCameraButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:contentDescription="@string/external_camera"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_linked_camera_24"
            app:layout_constraintBottom_toTopOf="@id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/captureImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/captureImage"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/external_camera"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/externalCameraButton"
            app:layout_constraintStart_toStartOf="@+id/externalCameraButton"
            app:layout_constraintTop_toBottomOf="@+id/externalCameraButton" />

        <ImageView
            android:id="@+id/captureImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_camera_24" />

        <ImageView
            android:id="@+id/switchCamera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/switch_camera"
            app:layout_constraintEnd_toEndOf="@+id/preview"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_switch_camera" />

        <ImageView
            android:id="@+id/selectFromGallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/select_from_gallery"
            app:layout_constraintBottom_toTopOf="@id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/captureImage"
            app:layout_constraintTop_toTopOf="@+id/captureImage"
            app:srcCompat="@drawable/ic_gallery" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_from_gallery"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/selectFromGallery"
            app:layout_constraintStart_toStartOf="@+id/selectFromGallery"
            app:layout_constraintTop_toBottomOf="@+id/selectFromGallery" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>